--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -16,6 +16,7 @@ PowOSh
         <%=  link_to book_path(book.id) do %>
         <div class="card" style="background-image: linear-gradient(to top,  rgba(81,51,27,0.7) 25%,rgba(255,255,255,0.1) 100%), url('<%= image_url book.user.profile.profile_picture %>');">
           <div class="card-description-bis">
+            <p><%=book.title%></p>
             <p>Get it from <%=book.user.profile.first_name%>!</p>
           </div>
         </div>
