--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -14,7 +14,7 @@
   <%= f.label :my_description, 'Ma description' %>
   <%= f.input :my_description, label: false, placeholder:"J'adore ce livre parce que..." %>
   <%= f.label :my_rating, 'Mon évaluation' %>
-  <%= f.input :my_description, label: false, collection: 1..10 %>
+  <%= f.input :my_rating, label: false, collection: 1..10 %>
   <%= f.label :isbn, 'Code ISBN' %>
   <%= f.input :isbn, label: false, placeholder:"978-1-56619-909-4" %>
 
