--- a/app/assets/stylesheets/layout/_toptabs.scss
+++ b/app/assets/stylesheets/layout/_toptabs.scss
@@ -7,26 +7,27 @@
 
 .tabs-ind {
   flex: 1 1 0%;
-  padding-top: 7px;
-  padding-bottom: 0px;
   font-size: 10px;
+  height: 50px;
   background-color: $primary-dark;
   color: white;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  border-right:solid 1px $primary-light;
 }
 
-a.tab {
+.tabs-ind span {
   color: white;
+  opacity: 0.7;
 }
 
 
-.tabs-ind a:hover{
+.tabs-ind:hover{
+  background-color: $primary-light;
   cursor: pointer;
   text-decoration: none;
-  opacity: 0.8;
-}
-
-.tabs-ind :hover{
-  background-color: $primary-light;
+  color: white;
 }
 
 .my-icon {
