--- a/app/assets/stylesheets/components/_books.scss
+++ b/app/assets/stylesheets/components/_books.scss
@@ -1,13 +1,16 @@
 body {
    // background-color: #333;
-   background-color: primary-light;
+//    background-color: primary-light;
 }
 
 #wrapper {
   width: 200px;
-  margin: 30px auto;
+  marginpp: 30px auto;
 }
 
+.book-container {
+  background-color: #FAFAFA
+}
 
 /*********************
         BOOK
