--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,23 +2,23 @@
 <%= @book.title %> on PowOSh
 <% end %>
 
-
-
+<div class='book-container'>
 <div id="wrapper">
+  <div class='book-container'>
 
-  <!-- BOOK -->
-  <div class="book">
-    <div class="book-cover">
-      <h1 class="title"><%= @book.title %></h1>
-      <!--     <h2 class="subtitle">this is the Book Subitle</h2> -->
-      <h5 class="author"><span> écrit par</span> <%= @book.author %> </h5>
+    <!-- BOOK -->
+    <div class="book">
+      <div class="book-cover">
+        <h1 class="title"><%= @book.title %></h1>
+        <!--     <h2 class="subtitle">this is the Book Subitle</h2> -->
+        <h5 class="author"><span> écrit par</span> <%= @book.author %> </h5>
+      </div>
+      <div class="book-top"></div>
+      <div class="book-right"></div>
     </div>
-    <div class="book-top"></div>
-    <div class="book-right"></div>
+    <!-- /BOOK -->
   </div>
-  <!-- /BOOK -->
 </div>
-
 <!--
 ////////////////////////////////////////////////////////////
 Following appears if current user is different from Book owner
