notification in navbar

--- a/app/assets/stylesheets/components/_tabs.scss
+++ b/app/assets/stylesheets/components/_tabs.scss
@@ -1,9 +1,9 @@
-.tab-xs-third {
-  width: 32%;
+.tab-xs-quarter {
+  width: 24%;
 }
 
 @media (min-width: 768px) {
-  .tab-xs-third {
+  .tab-xs-quarter {
     width: auto;
   }
 
