--- a/app/assets/stylesheets/components/_headers.scss
+++ b/app/assets/stylesheets/components/_headers.scss
@@ -1,21 +1,39 @@
 .header-wrapper {
-  box-shadow: 0 0.5px 1px 0 $primary-light;
+  // box-shadow: 0 0.5px 1px 0 $primary-light;
   margin-bottom: 20px;
   min-height: 110px;
 }
 
 .library-header {
-  h1, h2, h3, h4 {
+  h1, h2, h3 {
     color: $primary-dark;
     padding-bottom: 10px;
   }
+}
 
-  .nav li{
+.nav-library {
+
+  li{
+    margin-left: 0;
+    margin-right: 0;
+    border-bottom: 0;
     margin-bottom: 0;
     background-color: white;
-    font-size: 12px;
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
+    font-size: 9px;
+
+    border-collapse: collapse;
+
+
+    a {
+      border-bottom-left-radius: 0;
+      border-bottom-right-radius: 0;
+      padding-left: 0;
+      padding-right: 0;
+      margin-left: 0;
+      margin-right: 0;
+      border-collapse: collapse;
+    }
   }
+
 }
 
