--- a/app/assets/stylesheets/components/_lists.scss
+++ b/app/assets/stylesheets/components/_lists.scss
@@ -1,14 +1,22 @@
 .list-row-library {
-  min-height: 130px;
+  // min-height: 130px;
   // height: 50vh;
   padding-top: 10px;
 }
 
 .loan-requester {
-  width: 100px;
-  height: 100px;
+  width: 30px;
+  height: 30px;
   background-size: cover;
   position: relative;
+}
+
+@media (min-width: 768px) {
+  .loan-requester {
+    width: 80px;
+    height: 80px;
+  }
+
 }
 
 // .list-row-130 {
