--- a/app/views/shared/_loan_card.html.erb
+++ b/app/views/shared/_loan_card.html.erb
@@ -1,16 +1,14 @@
 <% user = owner_pic ? loan.book.user : loan.user %>
-<div class="col-xs-6 col-md-2">
+<div class="col-xs-3 col-md-2">
   <div class="flex-container-centered-vh list-row-130">
     <% profile_image_path = user.profile.profile_picture %>
-    <div class="loan-requester avatar-square-md", style="background-image: url(<%= image_path profile_image_path %>);">
-      <div class="profile-image-overlay text-center">
-        <%= user.id %> - <%= user.profile.first_name %> <%= overlay %>!
-      </div>
+    <div class="loan-requester avatar-square", style="background-image: url(<%= image_path profile_image_path %>);">
+
     </div>
   </div>
 </div>
 
-<div class="col-xs-6 col-md-6">
+<div class="col-xs-9 col-md-6">
   <div class="flex-container-centered-v list-row-130">
     <div>
       <strong><%= loan.book.title %></strong> (<%= loan.book.language %>)
