--- a/app/assets/stylesheets/components/_lists.scss
+++ b/app/assets/stylesheets/components/_lists.scss
@@ -30,3 +30,10 @@
     color: $primary;
   }
 }
+
+.btn-list-close {
+  color: $primary-dark;
+  background-color: white;
+  // font-size: 10px;
+  margin: 20px;
+}
