--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,7 +6,7 @@
 
 
     <!-- Search form -->
-    <form action="books/search" class="navbar-wagon-search">
+    <form action="<%= books_search_url %>" class="navbar-wagon-search">
       <input type="text" class="navbar-wagon-search-input" placeholder="Search your favorite book">
       <button type="submit" class="navbar-wagon-search-btn">
         <i class="fa fa-search"></i>
