--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -3,6 +3,8 @@
   <div class="banner-content">
     <h1>PowOSh</h1>
     <p>Share emotions with your friends</p>
-    <a class="btn btn-primary btn-lg">Borrow a Book!</a>
+    <%= link_to new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" do %>
+    <a class="btn btn-primary btn-lg">Login!</a>
+    <% end %>
   </div>
 </div>
