--- a/app/views/shared/_loans_shared.html.erb
+++ b/app/views/shared/_loans_shared.html.erb
@@ -9,7 +9,7 @@
 
     <%= render partial: "shared/loan_card", object: loan, as: :loan,
     locals: {
-      owner_pic: true,
+      owner_pic: false,
       overlay: "'s book'",
       date_text: "Loan approved: ",
       date_method: "approved_on",
