--- a/app/views/loans/library.html.erb
+++ b/app/views/loans/library.html.erb
@@ -9,7 +9,7 @@
             <h3>Library</h3>
 
             <ul class="nav nav-pills text-center" id="library-tabs" role="tablist">
-              <li role="presentation" class="active tab-xs-quarter"><a href="#todo" aria-controls="home" role="tab" data-toggle="tab">Requests (<%= Loan.user_action_required.where(action_owner: current_user.id).count %>)</a></li>
+              <li role="presentation" class="active tab-xs-quarter"><a href="#todo" aria-controls="home" role="tab" data-toggle="tab">Requests</a></li>
               <li role="presentation" class="tab-xs-quarter"><a href="#shared" aria-controls="home" role="tab" data-toggle="tab">Shared</a></li>
               <li role="presentation" class="tab-xs-quarter"><a href="#borrowed" aria-controls="profile" role="tab" data-toggle="tab">Borrowed</a></li>
               <li role="presentation" class="tab-xs-quarter"><a href="#library" aria-controls="profile" role="tab" data-toggle="tab">Library</a></li>
