fixing login button

--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -4,7 +4,9 @@
     <h1>PowOSh</h1>
     <p>Share emotions with your friends</p>
     <%= link_to new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" do %>
-    <a class="btn btn-primary btn-lg">Login!</a>
+    <div class="btn btn-primary btn-lg btn-login">Login</div>
     <% end %>
+
+
   </div>
 </div>
