devise setup done

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,7 +2,10 @@
 PowOSh
 <% end %>
 
-<%= render 'shared/banner' %>
+<!-- I'm commenting out the home page banner to avoid confusion now that we have
+login -->
+<!--
+<%= render 'shared/banner' %> -->
 
 <div class="container add-margin-top text-center">
 <h2>Look who can make you happy!</h2>
