--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -31,3 +31,13 @@
   padding-left: 40px;
   padding-right: 40px;
 }
+
+.btn-facebook {
+  background-color: #43609C;
+  border-color: #314773;
+  width: 100%;
+
+  &:hover {
+    background-color: #283A5E;
+  }
+}
