Firstversion of search

--- a/app/views/books/search.html.erb
+++ b/app/views/books/search.html.erb
@@ -3,7 +3,7 @@
 <div class="add-margin-top">
   <div class="container">
     <div class="row">
-      <% @books.take(10).each do |book| %>
+      <% @books.each do |book| %>
 
       <div class="container">
         <div class="product">
