--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
 
   <!-- Search form -->
   <form action="<%= books_search_url %>" class="navbar-wagon-search">
-    <input type="text" class="navbar-wagon-search-input" name="query" placeholder="Search your favorite book">
+    <input type="text" class="navbar-wagon-search-input" name="query" placeholder="Search for your favorite book">
     <button type="submit" class="navbar-wagon-search-btn">
       <i class="fa fa-search"></i>
     </button>
