--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -26,9 +26,11 @@ $base-height: 1.4;
 // Scheme
 $brand-color: #BD451F;
 $primary:#BD451F;
-$primary-dark:#635A43;
-$primary-light:#9C8D68;
-
+// $primary-dark:#635A43;
+// $primary-light:#9C8D68;
+$primary-dark:#5E5E5E;
+$primary-light:#949494;
+$primary-lighter:#DCDCDC;
 
 $red: #EE5F5B;
 $blue: #BD451F;
