--- a/app/views/shared/_toptabs.html.erb
+++ b/app/views/shared/_toptabs.html.erb
@@ -6,7 +6,7 @@
     <span>Home</span>
   <% end %>
 
-   <%= link_to new_book_path, class: "tabs-ind" do %>
+   <%= link_to books_sharebook_path, class: "tabs-ind" do %>
     <i class="fa fa-share my-icon"></i>
     <span>Share</span>
   <% end %>
