--- a/app/assets/stylesheets/layout/_toptabs.scss
+++ b/app/assets/stylesheets/layout/_toptabs.scss
@@ -17,13 +17,39 @@
   border-right:solid 1px $primary-light;
 }
 
+.tabs-ind-2 {
+  flex: 1 1 0%;
+  font-size: 14px;
+  height: 50px;
+  background-color: $primary-dark;
+  color: white;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  border-right:solid 1px $primary-light;
+}
+
+
 .tabs-ind span {
   color: white;
   opacity: 0.7;
 }
 
+.tabs-ind-2 span {
+  color: white;
+  opacity: 0.7;
+}
+
+
 
 .tabs-ind:hover{
+  background-color: $primary-light;
+  cursor: pointer;
+  text-decoration: none;
+  color: white;
+}
+
+.tabs-ind-2:hover{
   background-color: $primary-light;
   cursor: pointer;
   text-decoration: none;
